--- a/feedback-continuo/package.json
+++ b/feedback-continuo/package.json
@@ -11,9 +11,11 @@
     "@types/react": "^18.0.5",
     "@types/react-dom": "^18.0.1",
     "@types/styled-components": "^5.1.25",
+    "@types/yup": "^0.29.13",
     "axios": "^0.26.1",
     "formik": "^2.2.9",
     "moment": "^2.29.3",
+    "notiflix": "^3.2.5",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
