--- a/feedback-continuo/package.json
+++ b/feedback-continuo/package.json
@@ -9,6 +9,7 @@
     "@types/jest": "^27.4.1",
     "@types/node": "^16.11.27",
     "@types/react": "^18.0.5",
+    "@types/react-autocomplete": "^1.8.6",
     "@types/react-dom": "^18.0.1",
     "@types/styled-components": "^5.1.25",
     "@types/yup": "^0.29.13",
@@ -17,6 +18,7 @@
     "moment": "^2.29.3",
     "notiflix": "^3.2.5",
     "react": "^18.0.0",
+    "react-autocomplete": "^1.8.1",
     "react-dom": "^18.0.0",
     "react-password-strength-bar": "^0.4.0",
     "react-router-dom": "^6.3.0",
