--- a/feedback-continuo/package.json
+++ b/feedback-continuo/package.json
@@ -20,6 +20,7 @@
     "react": "^18.0.0",
     "react-autocomplete": "^1.8.1",
     "react-dom": "^18.0.0",
+    "react-icons": "^4.3.1",
     "react-password-strength-bar": "^0.4.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
