--- a/feedback-continuo/package.json
+++ b/feedback-continuo/package.json
@@ -24,6 +24,7 @@
     "react-password-strength-bar": "^0.4.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.3.1",
     "styled-components": "^5.3.5",
     "typescript": "^4.6.3",
     "web-vitals": "^2.1.4",
